# mcp-math-solver

./: MathServer.py  README .md  README.md  client.py  pyproject.toml  requirements.txt
